Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -95,12 +95,12 @@
       ],
       "metadata": {
         "id": "0qZX8_ZQBYyk",
-        "outputId": "23789628-eabd-45ee-ea89-26bd367752a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "056ad3b9-0519-42b7-ae16-727378af9fa7"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,12 +113,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('Escuela de Datos de Alura');\n",
+        "print('Nombre: Jesús');\n",
+        "print('Apellido: Valencia');\n",
+        "print('J')\n",
+        "print('E')\n",
+        "print('S')\n",
+        "print('Escuela de Datos de Alura');\n",
+        "print('Nombre: Jesús');\n",
+        "print('Apellido: Valencia');\n",
+        "print('J')\n",
+        "print('E')\n",
+        "print('S')\n",
+        "print('U')\n",
+        "print('S')\n",
+        "print('Año actual: ', 2025)"
+      ],
       "metadata": {
-        "id": "GLMzF_AKBY7a"
+        "id": "uROZh9GY0OS7",
+        "outputId": "2f5f4549-a544-4bea-d0c8-e74e6a54b2f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escuela de Datos de Alura\n",
+            "Nombre: Jesús\n",
+            "Apellido: Valencia\n",
+            "J\n",
+            "E\n",
+            "S\n",
+            "Escuela de Datos de Alura\n",
+            "Nombre: Jesús\n",
+            "Apellido: Valencia\n",
+            "J\n",
+            "E\n",
+            "S\n",
+            "U\n",
+            "S\n",
+            "Año actual:  2025\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,30 +197,91 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "5"
+      ],
       "metadata": {
-        "id": "vsHh5buZADND"
+        "id": "vsHh5buZADND",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "74686b1b-8ed2-471d-edf4-a70cd80ace65"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "id(5)"
+      ],
       "metadata": {
-        "id": "sivPtqSjADQV"
+        "id": "sivPtqSjADQV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aae9caff-ec09-4e4b-961f-72114c6255e3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10750984"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad = 5;"
+      ],
       "metadata": {
         "id": "JC8jO47wADlm"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(id(edad))\n",
+        "print(id(5))"
+      ],
+      "metadata": {
+        "id": "FG_4r9qj3OS1",
+        "outputId": "d7c527f5-e3ce-49db-d434-69f1daf4a322",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10750984\n",
+            "10750984\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
